<resources>
    <string name="app_name">NewsApp 2</string>

    <string name="action_settings">Settings</string>
    <string name="no_connection">No connection</string>
    <string name="no_data_found">No data found.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="general_settings">General Settings</string>

    <string name="title_subject">Subject</string>
    <string name="key_subject_name" translatable="false">key_subject_name</string>
    <string name="default_subject">android</string>

    <string name="title_order_by">Order By</string>
    <string name="key_order_by" translatable="false">key_order_by</string>
    <string name="relevance">Relevance</string>
    <string name="newest">Newest</string>
    <string name="oldest">Oldest</string>
    <string name="value_relevance" translatable="false">relevance</string>
    <string name="value_newest" translatable="false">newest</string>
    <string name="value_oldest" translatable="false">oldest</string>

    <string name="title_page_size">Page size</string>
    <string name="key_page_size" translatable="false">key_page_size</string>
    <string name="value_default_page_size" translatable="false">10</string>
</resources>